# easy-tree

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
easy_tree/: __init__.py  entities.py  logic.py  random_forest.py  tree.py  usecases.py
eazy_tree/: entities.py  logic.py  tree.py  usecases.py
tests/: test_entities.py  test_logic.py  test_random_forest.py  test_tree.py  test_usecases.py
tests/data/: titanic_train.pq
